--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -259,14 +259,8 @@ manually highlighting the text and right clicking "copy".
 - Show more or less code by pressing `Space` or `Enter` while the ghost button
   is in focus.
 
-#### Screen readers
-
-- VoiceOver: Users can copy code by pressing `Space` while the copy button has
-  screen reader focus.
-- JAWS: Users can copy code by pressing `Space` while the copy button has screen
-  reader focus.
-- NVDA: Users can copy code by pressing `Space` while the copy button has screen
-  reader focus.
+For additional keyboard interactions, see the
+[accessibility tab](/components/code-snippet/accessibility#keyboard-interaction).  
 
 ## Inline
 
@@ -325,7 +319,7 @@ Use multi-line code snippets for displaying multiple lines of code.
 
 #### Show more button
 
-A ghost button can be added to a multi-line code snippet to show more or fewer
+A Show more ghost button can be added to a multi-line code snippet to show more or fewer
 lines of code. Use this functionality if your layout is tight on space.
 
 <Row>
