Updated image and alt
Table sorting image update for clarity. Also added code styling on keyboard keys

--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -45,7 +45,7 @@ There are three data table variants with different interactions. Optional featur
 </Column>
 </Row>
 
-For sortable tables, the column headers are reachable by Tab and sortable with Space or Enter.
+For sortable tables, the column headers are reachable by `Tab` and sortable with `Space` or `Enter`.
 
 ### Controls inside tables
 
@@ -68,7 +68,7 @@ If columns are sortable, the sort symbols appear on hover or focus. A sorted col
 <Row>
 <Column colLg={8}>
 
-![he Rule column header has a 'sorted ascending' icon, and the Status column header has focus and shows a sortable icon](images/data-table-accessibility-3.png)
+![he Status column header has a 'sorted ascending' icon, and the Rule column header has focus and shows a sortable icon](images/data-table-accessibility-3.png)
 
 </Column>
 </Row>
