--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -68,7 +68,7 @@ If columns are sortable, the sort symbols appear on hover or focus. A sorted col
 <Row>
 <Column colLg={8}>
 
-![he Status column header has a 'sorted ascending' icon, and the Rule column header has focus and shows a sortable icon](images/data-table-accessibility-3.png)
+![The Rule column header has focus and shows a sortable icon, and the Status column header has a 'sorted ascending' icon](images/data-table-accessibility-3.png)
 
 </Column>
 </Row>
