--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -82,7 +82,7 @@ Since there is no persistent visual indicator that a table is sortable, designer
 <Row>
 <Column colLg={8}>
 
-![the header row is annotated 'sortable column headers'](images/data-table-accessibility-4.png)
+![the header row is annotated 'sortable headers'](images/data-table-accessibility-4.png)
 
 </Column>
 </Row>
