--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -21,6 +21,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
   it is placed on.
 </Caption>
 
+<Row>
+<Column colLg={8}>
+
+![An example of an overflow menu](images/overflow-menu-style-1.png)
+
+</Column>
+</Row>
+
 ### Interactive states
 
 | Element              | Property         | Color token            |
@@ -33,13 +41,21 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Danger option:hover  | background-color | `$button-danger-hover` |
 | Menu option:disabled | text color       | `$text-disabled`       |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Overflow menu text hover example](images/overflow-menu-style-1.png)
+![An overflow menu icon button interactive states](images/overflow-menu-usage-2.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Text and warning hover examples for overflow menu</Caption>
+<Row>
+<Column colLg={12}>
+
+![An open overflow menu interactive states](images/overflow-menu-usage-3.png)
+
+</Column>
+</Row>
 
 ## Typography
 
@@ -64,7 +80,7 @@ menu. The overflow menu icon can be found in the
 
 <div className="image-fixed">
 
-![Structure and spacing measurements for an overflow menu](images/overflow-menu-style-3.png)
+![Structure and spacing measurements for an overflow menu](images/overflow-menu-style-4.png)
 
 </div>
 
