update style content

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -44,7 +44,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 <Row>
 <Column colLg={8}>
 
-![An overflow menu icon button interactive states](images/overflow-menu-usage-2.png)
+![An overflow menu icon button interactive states](images/overflow-menu-style-2.png)
 
 </Column>
 </Row>
@@ -52,7 +52,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 <Row>
 <Column colLg={12}>
 
-![An open overflow menu interactive states](images/overflow-menu-usage-3.png)
+![An open overflow menu interactive states](images/overflow-menu-style-3.png)
 
 </Column>
 </Row>
@@ -78,7 +78,7 @@ menu. The overflow menu icon can be found in the
 | Menu option | padding-right, padding-left | 16 / 1    | `$spacing-05` |
 | Divider     | border-top                  | 1px       | –             |
 
-<div className="image-fixed">
+<div className="image--fixed">
 
 ![Structure and spacing measurements for an overflow menu](images/overflow-menu-style-4.png)
 
