--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -31,23 +31,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Element              | Property         | Color token            |
-| -------------------- | ---------------- | ---------------------- |
-| Icon button:focus    | border           | `$focus`               |
-| Menu option:focus    | border           | `$focus`               |
-| Icon button:hover    | background-color | `$background-hover`    |
-| Menu option:hover    | background-color | `$layer-hover` \*      |
-|                      | text color       | `$text-primary`        |
-| Danger option:hover  | background-color | `$button-danger-hover` |
-| Menu option:disabled | text color       | `$text-disabled`       |
-
-<Row>
-<Column colLg={8}>
-
-![An overflow menu icon button interactive states](images/overflow-menu-style-2.png)
-
-</Column>
-</Row>
+| Element              | Property         | Color token              |
+| -------------------- | ---------------- | ------------------------ |
+| Icon button:focus    | border           | `$focus`                 |
+| Menu option:focus    | border           | `$focus`                 |
+| Icon button:hover    | background-color | `$background-hover`      |
+| Menu option:hover    | background-color | `$layer-hover` \*        |
+|                      | text color       | `$text-primary`          |
+| Danger option:hover  | background-color | `$button-danger-primary` |
+| Menu option:disabled | text color       | `$text-disabled`         |
 
 <Row>
 <Column colLg={12}>
