update interactive image

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -41,13 +41,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Danger option:hover  | background-color | `$button-danger-primary` |
 | Menu option:disabled | text color       | `$text-disabled`         |
 
-<Row>
-<Column colLg={12}>
+<div className="image--fixed">
 
-![An open overflow menu interactive states](images/overflow-menu-style-3.png)
+![Interactive states for overflow menu](images/overflow-menu-style-2.png)
 
-</Column>
-</Row>
+</div>
 
 ## Typography
 
