--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -41,11 +41,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Danger option:hover  | background-color | `$button-danger-primary` |
 | Menu option:disabled | text color       | `$text-disabled`         |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={12}>
 
 ![Interactive states for overflow menu](images/overflow-menu-style-2.png)
 
-</div>
+</Column>
+</Row>
 
 ## Typography
 
