update progress bar misc.

--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -75,8 +75,8 @@ how long a process will take, or if a request is being executed.
 
 #### When not to use
 
-- When the progress bar will be replaced by a minor user interface element once
-  loaded, use [skeleton states](/patterns/loading) instead
+- When the load time is expected to display expanded information, use skeleton
+  states instead
 - When manual user actions are required to progress, use a
   [progress indicator](/components/progress-indicator/usage) instead
 - When the progress is determined by user actions such as tutorials completed,
@@ -470,7 +470,7 @@ to right) when enough information is gathered to end the load animation.
 
 #### Components
 
-- [Loading: skeleton states](/patterns/loading/#skeleton-states)
+- [Loading: skeleton states](/patterns/loading/skeleton-states)
 
 #### Inline loading or progress bar?
 
