--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -49,7 +49,7 @@ For sortable tables, the column headers are reachable by `Tab` and sortable with
 
 ### Controls inside tables
 
-Any interactive controls in data cells are in the tab order and maintain normal keyboard operation. This also applies to expandable table rows, which operate in the same manner as [accordions](https://www.carbondesignsystem.com/components/accordions/usage/").
+Any interactive controls in data cells are in the tab order and maintain normal keyboard operation. This also applies to expandable table rows, which operate in the same manner as [accordions](https://www.carbondesignsystem.com/components/accordions/usage/)
 
 <Row>
 <Column colLg={8}>
