docs: update image production guidelines kit link
- Update the Image production guidelines kit link to link out the Sketch cloud so people can access both the library and the file.

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -187,8 +187,8 @@ to help designers with every aspect of image creation and component specs.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="Image production guidelines Sketch kit"
-    href="sketch://add-library/cloud/240226b0-f455-484d-b412-cfd13fb1bb39"
-    actionIcon="download">
+    href="https://www.sketch.com/s/240226b0-f455-484d-b412-cfd13fb1bb39"
+    actionIcon="launch">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
