fix(tokens): v11 renames and usage fixes

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -100,7 +100,7 @@ confidence and trust in the interface itself.
 ![Order confirmation page prior to the redesign](images/checkout-before.png)
 
 <Caption>
-  <span class="bx--type-semibold">Before:</span> Order confirmation page prior
+  <span class="cds--type-semibold">Before:</span> Order confirmation page prior
   to the redesign.
 </Caption>
 
@@ -111,7 +111,7 @@ confidence and trust in the interface itself.
 ![Order confirmation page after the redesign](images/checkout-after.png)
 
 <Caption>
-  <span class="bx--type-semibold">After:</span> Order confirmation page after
+  <span class="cds--type-semibold">After:</span> Order confirmation page after
   the redesign.
 </Caption>
 
@@ -243,7 +243,7 @@ component.
 ![Order confirmation page design](images/delivery.png)
 
 <Caption>
-  <span class="bx--type-semibold">Before:</span> The order confirmation screen
+  <span class="cds--type-semibold">Before:</span> The order confirmation screen
   design that was handed off to developers.
 </Caption>
 
@@ -254,8 +254,8 @@ component.
 ![Order confirmation page in production](images/in-prod.png)
 
 <Caption>
-  <span class="bx--type-semibold">After:</span> The order confirmation screen in
-  production at the end of the sprint.
+  <span class="cds--type-semibold">After:</span> The order confirmation screen
+  in production at the end of the sprint.
 </Caption>
 
 </Column>
