--- a/src/pages/components/checkbox/code.mdx
+++ b/src/pages/components/checkbox/code.mdx
@@ -82,8 +82,8 @@ documentation, see the Storybooks for each framework below.
         'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}
   >{`
-<fieldset className="bx--fieldset">
-  <legend className="bx--label">Checkbox heading</legend>
+<fieldset className="cds--fieldset">
+  <legend className="cds--label">Checkbox heading</legend>
   <Checkbox defaultChecked labelText="Checkbox label" id="checked" />
   <Checkbox labelText="Checkbox label" id="checked-2" />
 </fieldset>
