--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -111,8 +111,8 @@ set whereas radio buttons allow the user to select only one option.
         'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}
   >{`
-<fieldset className="bx--fieldset">
-  <legend className="bx--label">Checkbox heading</legend>
+<fieldset className="cds--fieldset">
+  <legend className="cds--label">Checkbox heading</legend>
   <Checkbox defaultChecked labelText="Checkbox label" id="checked" />
   <Checkbox labelText="Checkbox label" id="checked-2" />
 </fieldset>
