--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -84,7 +84,8 @@ import {
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Delete, Save, Download }}>
+  scope={{ rowData, headerData, React, Delete, Save, Download }}
+>
   <ComponentVariant
     id="default-table"
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
@@ -97,7 +98,8 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}>
+    }}
+  >
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
@@ -137,7 +139,8 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}>
+    }}
+  >
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -186,7 +189,8 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
-    }}>
+    }}
+  >
     {`<DataTable
   rows={rowData}
   headers={headerData}>
@@ -235,7 +239,8 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}>
+    }}
+  >
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -364,7 +369,7 @@ medium, small, extra small.
 </Column>
 </Row>
 
-The column header row `.bx--data-table thead` should always match the row size
+The column header row `.cds--data-table thead` should always match the row size
 of the table. Extra large row heights are only recommended if your data is
 expected to have 2 lines of content in a single row.
 
