--- a/src/pages/components/progress-indicator/code.mdx
+++ b/src/pages/components/progress-indicator/code.mdx
@@ -101,7 +101,7 @@ code usage documentation, see the Storybooks for each framework below.
             <Tooltip
               direction="bottom"
               showIcon={false}
-              triggerClassName="bx--progress-label"
+              triggerClassName="cds--progress-label"
               triggerText="Second step with tooltip"
               tooltipId="tooltipId-0">
               <p>Second step with tooltip</p>
