--- a/src/pages/components/progress-indicator/usage.mdx
+++ b/src/pages/components/progress-indicator/usage.mdx
@@ -70,7 +70,7 @@ percentage of completeness as each task is completed.
             <Tooltip
               direction="bottom"
               showIcon={false}
-              triggerClassName="bx--progress-label"
+              triggerClassName="cds--progress-label"
               triggerText="Second step with tooltip"
               tooltipId="tooltipId-0">
               <p>Second step with tooltip</p>
