--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -182,7 +182,7 @@ code usage documentation, see the Storybooks for each framework below.
           />
          <StructuredListCell>
             <CheckmarkFilled16
-              className="bx--structured-list-svg"
+              className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
             </CheckmarkFilled16>
@@ -206,7 +206,7 @@ code usage documentation, see the Storybooks for each framework below.
           />
          <StructuredListCell>
             <CheckmarkFilled16
-              className="bx--structured-list-svg"
+              className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
             </CheckmarkFilled16>
@@ -230,7 +230,7 @@ code usage documentation, see the Storybooks for each framework below.
           />
          <StructuredListCell>
             <CheckmarkFilled16
-              className="bx--structured-list-svg"
+              className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
             </CheckmarkFilled16>
