--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -162,7 +162,8 @@ import { Filter16 } from '@carbon/icons-react';
       label: 'Definition tooltip',
     },
   ]}
-  scope={{ Filter16 }}>
+  scope={{ Filter16 }}
+>
   <ComponentVariant
     id="tooltip"
     links={{
@@ -170,12 +171,12 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltip--default-bottom',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
-    }}>{`
+    }}
+  >{`
     <Tooltip
       direction="bottom"
       tabIndex={0}
@@ -184,7 +185,7 @@ import { Filter16 } from '@carbon/icons-react';
       <p>
         This is some tooltip text. This box shows the maximum amount of text that should be displayed inside. If more room is needed, use a modal instead.
       </p>
-      <div className="bx--tooltip__footer">
+      <div className="cds--tooltip__footer">
         <Link href="#">Learn more</Link>
         <Button size="small">
           Create
@@ -202,12 +203,12 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipicon--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-icon--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
-    }}>{`
+    }}
+  >{`
     <TooltipIcon
       tooltipText="Filter"
     >
@@ -224,12 +225,12 @@ import { Filter16 } from '@carbon/icons-react';
         'https://react.carbondesignsystem.com/?path=/story/components-tooltipdefinition--default',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-tooltip-definition--basic',
-      Vue:
-        'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
+      Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
-    }}>{`
+    }}
+  >{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
     >
