--- a/src/pages/developing/angular-tutorial/step-1.mdx
+++ b/src/pages/developing/angular-tutorial/step-1.mdx
@@ -369,19 +369,19 @@ declarations: [HeaderComponent];
 
 ```html path=src/app/app.component.html
 <app-header></app-header>
-<main class="bx--content">
+<main class="cds--content">
   <router-outlet></router-outlet>
 </main>
 ```
 
 Let's add some padding to the top of the document, so the content is below the
-header. We are going to do this by using the `bx--header` class provided by
+header. We are going to do this by using the `cds--header` class provided by
 carbon. So in `header.component.ts` lets hostbind that class.
 
 ```javascript
 import { Component, HostBinding } from '@angular/core';
   ...
-  @HostBinding('class.bx--header') headerClass = true;
+  @HostBinding('class.cds--header') headerClass = true;
 ```
 
 ### Create pages
