--- a/src/pages/developing/frameworks/vanilla.mdx
+++ b/src/pages/developing/frameworks/vanilla.mdx
@@ -191,7 +191,7 @@ dependencies between components will not create extra CSS.
 #### Namespacing
 
 Carbon Components are built to be included individually and not clobber global
-styles - all `class` attributes are prefixed by the `bx--` moniker. You can
+styles - all `class` attributes are prefixed by the `cds--` moniker. You can
 specify your own prefix by changing the SCSS variable `$prefix`.
 
 ### JavaScript
@@ -257,8 +257,8 @@ you can instantiate it on a DOM node with the `.create()` API.
 For example, if you have the following HTML for modal:
 
 ```html
-<div data-modal id="modal-nofooter" class="bx--modal" tabindex="-1">
-  <div class="bx--modal-container">...</div>
+<div data-modal id="modal-nofooter" class="cds--modal" tabindex="-1">
+  <div class="cds--modal-container">...</div>
 </div>
 ```
 
