--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -123,19 +123,19 @@ layering model.
 <Row className="color-blocks">
 <Column colSm={1} colMd={1} colLg={2}>
 
-<div className="bx--aspect-ratio bx--aspect-ratio--1x1">
-  <div className="bx--aspect-ratio--object color-square color-square--white">
+<div className="cds--aspect-ratio cds--aspect-ratio--1x1">
+  <div className="cds--aspect-ratio--object color-square color-square--white">
     White
   </div>
 </div>
 
-<div className="bx--caption">Light</div>
+<div className="cds--caption">Light</div>
 
 </Column>
 <Column colSm={1} colMd={1} colLg={2}>
 
-<div className="bx--aspect-ratio bx--aspect-ratio--1x1">
-  <div className="bx--aspect-ratio--object color-square color-square--gray-10">
+<div className="cds--aspect-ratio cds--aspect-ratio--1x1">
+  <div className="cds--aspect-ratio--object color-square color-square--gray-10">
     Gray 10
   </div>
 </div>
@@ -143,19 +143,19 @@ layering model.
 </Column>
 <Column colSm={1} colMd={1} colLg={2}>
 
-<div className="bx--aspect-ratio bx--aspect-ratio--1x1">
-  <div className="bx--aspect-ratio--object color-square color-square--gray-100">
+<div className="cds--aspect-ratio cds--aspect-ratio--1x1">
+  <div className="cds--aspect-ratio--object color-square color-square--gray-100">
     Gray 100
   </div>
 </div>
 
-<div className="bx--caption">Dark</div>
+<div className="cds--caption">Dark</div>
 
 </Column>
 <Column colSm={1} colMd={1} colLg={2}>
 
-<div className="bx--aspect-ratio bx--aspect-ratio--1x1">
-  <div className="bx--aspect-ratio--object color-square color-square--gray-90">
+<div className="cds--aspect-ratio cds--aspect-ratio--1x1">
+  <div className="cds--aspect-ratio--object color-square color-square--gray-90">
     Gray 90
   </div>
 </div>
