--- a/src/pages/patterns/overflow-content/index.mdx
+++ b/src/pages/patterns/overflow-content/index.mdx
@@ -99,10 +99,10 @@ To use front- and end-line truncation, enter the appropriate class below and add
 hovered. The `width` of the container (or the text element itself) also needs to
 be configured in order to calculate where the truncation will start.
 
-| Type        | Class                       |
-| ----------- | --------------------------- |
-| _Frontline_ | `.bx--text-truncate--front` |
-| _End-line_  | `.bx--text-truncate--end`   |
+| Type        | Class                        |
+| ----------- | ---------------------------- |
+| _Frontline_ | `.cds--text-truncate--front` |
+| _End-line_  | `.cds--text-truncate--end`   |
 
 <br />
 
@@ -110,7 +110,7 @@ be configured in order to calculate where the truncation will start.
 
 ```html
 <div class="container">
-  <span title="123456789" class="bx--front-line">123456789</span>
+  <span title="123456789" class="cds--front-line">123456789</span>
 </div>
 ```
 
@@ -121,7 +121,7 @@ be configured in order to calculate where the truncation will start.
 ```
 
 ```css
-.bx--front-line {
+.cds--front-line {
   width: 100%;
   display: inline-block;
   direction: rtl;
