--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -86,7 +86,7 @@ file uploader.
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
   >{`
-      <div className="bx--file__container">
+      <div className="cds--file__container">
         <FileUploader
           accept={[
             '.jpg',
@@ -117,9 +117,9 @@ file uploader.
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
   >{`
-      <div className="bx--file__container">
-        <strong className='bx--file--label'>Account photo</strong>
-        <p className='bx--label-description'>
+      <div className="cds--file__container">
+        <strong className='cds--file--label'>Account photo</strong>
+        <p className='cds--label-description'>
           Only .jpg and .png files. 500kb max file size
         </p>
         <FileUploaderDropContainer
@@ -148,7 +148,7 @@ file uploader.
         'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}
   >{`
-      <div className="bx--file__container">
+      <div className="cds--file__container">
         <FileUploaderItem name='color.jpg' errorSubject='File size exceeds limits' errorBody='500 kb max file size. Select a new file and try again.'/>
       </div>
     `}</ComponentVariant>
