--- a/src/pages/components/inline-loading/style.mdx
+++ b/src/pages/components/inline-loading/style.mdx
@@ -7,13 +7,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                       | Property | Color token           |
-| --------------------------- | -------- | --------------------- |
-| `.bx--loading__background`  | stroke   | `$border-subtle` \*   |
-| `.bx--loading__stroke`      | stroke   | `$border-interactive` |
-| `.bx--inline-loading__text` | color    | `$text-secondary`     |
-| `status: finished`          | svg      | `$support-success`    |
-| `status: finished`          | svg      | `$support-error`      |
+| Class                        | Property | Color token           |
+| ---------------------------- | -------- | --------------------- |
+| `.cds--loading__background`  | stroke   | `$border-subtle` \*   |
+| `.cds--loading__stroke`      | stroke   | `$border-interactive` |
+| `.cds--inline-loading__text` | color    | `$text-secondary`     |
+| `status: finished`           | svg      | `$support-success`    |
+| `status: finished`           | svg      | `$support-error`      |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
