--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -143,7 +143,7 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
           />
          <StructuredListCell>
             <CheckmarkFilled16
-              className="bx--structured-list-svg"
+              className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
             </CheckmarkFilled16>
@@ -167,7 +167,7 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
           />
          <StructuredListCell>
             <CheckmarkFilled16
-              className="bx--structured-list-svg"
+              className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
             </CheckmarkFilled16>
@@ -191,7 +191,7 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
           />
          <StructuredListCell>
             <CheckmarkFilled16
-              className="bx--structured-list-svg"
+              className="cds--structured-list-svg"
               aria-label="select an option">
               <title>select an option</title>
             </CheckmarkFilled16>
