--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -100,7 +100,7 @@ documentation, see the Storybooks for each framework below.
       <p>
         This is some tooltip text. This box shows the maximum amount of text that should appear inside. If more room is needed please use a modal instead.
       </p>
-      <div className="bx--tooltip__footer">
+      <div className="cds--tooltip__footer">
         <Link href="#">Learn more</Link>
         <Button size="small">
           Create
