--- a/src/pages/developing/react-tutorial/step-2.mdx
+++ b/src/pages/developing/react-tutorial/step-2.mdx
@@ -43,7 +43,7 @@ build:
   frameborder="no"
   allowtransparency="true"
   allowfullscreen="true"
-  className="bx--iframe bx--iframe--border"
+  className="cds--iframe cds--iframe--border"
 />
 
 ## Fork, clone and branch
@@ -150,13 +150,13 @@ Run `yarn start` so we can begin building.
 Let's add our grid elements to `LandingPage.js`.
 
 In order to use the grid, we need to wrap everything in a
-`<div className="bx--grid">`. We can continue to make rows by adding a
-`<div className="bx--row">` inside the grid, as well as make columns within
-those rows by adding `<div className="bx--col-[breakpoint]-[size]">`.
+`<div className="cds--grid">`. We can continue to make rows by adding a
+`<div className="cds--row">` inside the grid, as well as make columns within
+those rows by adding `<div className="cds--col-[breakpoint]-[size]">`.
 
 Our column sizes are specified by the number of columns they'll be spanning. If
-we use `bx--col-lg-4`, it means it'll span 4 of the 16 columns. If we use
-`bx--col-lg-8` it means it'll span 8 of the 16 columns, and so on.
+we use `cds--col-lg-4`, it means it'll span 4 of the 16 columns. If we use
+`cds--col-lg-8` it means it'll span 8 of the 16 columns, and so on.
 
 We've included the designs for this tutorial app in the `design.sketch` file
 found as a top-level file in the `carbon-tutorial` repository. But, if you don't
@@ -182,34 +182,34 @@ We'll make rows like so:
 
 ```javascript path=src/content/LandingPage/LandingPage.js
 return (
-  <div className="bx--grid bx--grid--full-width landing-page">
-    <div className="bx--row landing-page__banner">
-      <div className="bx--col-lg-16">1</div>
+  <div className="cds--grid cds--grid--full-width landing-page">
+    <div className="cds--row landing-page__banner">
+      <div className="cds--col-lg-16">1</div>
     </div>
-    <div className="bx--row landing-page__r2">
-      <div className="bx--col-md-4 bx--col-lg-7">7/16</div>
-      <div className="bx--col-md-4 bx--offset-lg-1 bx--col-lg-8">8/16</div>
+    <div className="cds--row landing-page__r2">
+      <div className="cds--col-md-4 cds--col-lg-7">7/16</div>
+      <div className="cds--col-md-4 cds--offset-lg-1 cds--col-lg-8">8/16</div>
     </div>
-    <div className="bx--row landing-page__r3">
-      <div className="bx--col-md-4 bx--col-lg-4">1/4</div>
-      <div className="bx--col-md-4 bx--col-lg-4">1/4</div>
-      <div className="bx--col-md-4 bx--col-lg-4">1/4</div>
-      <div className="bx--col-md-4 bx--col-lg-4">1/4</div>
+    <div className="cds--row landing-page__r3">
+      <div className="cds--col-md-4 cds--col-lg-4">1/4</div>
+      <div className="cds--col-md-4 cds--col-lg-4">1/4</div>
+      <div className="cds--col-md-4 cds--col-lg-4">1/4</div>
+      <div className="cds--col-md-4 cds--col-lg-4">1/4</div>
     </div>
   </div>
 );
 ```
 
-We added a class of `bx--grid--full-width` to the grid container since our rows
+We added a class of `cds--grid--full-width` to the grid container since our rows
 need to expand the whole page without any margins. We also added some custom
 classes like `landing-page`, `landing-page__banner`, `landing-page__r2`, etc.,
 which we will use later.
 
 Also, take notice of the second row. The tab content only covers 7 columns at
 this large viewport to prevent overly-large line lengths, so we needed to add a
-1 column offset `bx--offset-lg-1` to second column to fill the full 16 columns
-in the grid. Then, both of those columns have `bx--col-md-4` classes so they are
-of equal width at medium-sized viewports.
+1 column offset `cds--offset-lg-1` to second column to fill the full 16 columns
+in the grid. Then, both of those columns have `cds--col-md-4` classes so they
+are of equal width at medium-sized viewports.
 
 ## Build landing page
 
@@ -229,8 +229,8 @@ import { Breadcrumb, BreadcrumbItem } from '@carbon/react';
 We can now add our component to the first row, along with a header, like so:
 
 ```html path=src/content/LandingPage/LandingPage.js
-<div className="bx--row landing-page__banner">
-  <div className="bx--col-lg-16">
+<div className="cds--row landing-page__banner">
+  <div className="cds--col-lg-16">
     <Breadcrumb noTrailingSlash>
       <BreadcrumbItem>
         <a href="/">Getting started</a>
@@ -273,23 +273,23 @@ const props = {
 Modify the second row to use the `Tab` component.
 
 ```html path=src/content/LandingPage/LandingPage.js
-<div className="bx--row landing-page__r2">
-  <div className="bx--col bx--no-gutter">
+<div className="cds--row landing-page__r2">
+  <div className="cds--col cds--no-gutter">
     <Tabs {...props.tabs}>
       <Tab {...props.tab} label="About">
-        <div className="bx--grid bx--grid--no-gutter bx--grid--full-width">
-          <div className="bx--row landing-page__tab-content">
-            <div className="bx--col-md-4 bx--col-lg-7">7/16</div>
-            <div className="bx--col-md-4 bx--offset-lg-1 bx--col-lg-8">
+        <div className="cds--grid cds--grid--no-gutter cds--grid--full-width">
+          <div className="cds--row landing-page__tab-content">
+            <div className="cds--col-md-4 cds--col-lg-7">7/16</div>
+            <div className="cds--col-md-4 cds--offset-lg-1 cds--col-lg-8">
               8/16
             </div>
           </div>
         </div>
       </Tab>
       <Tab {...props.tab} label="Design">
-        <div className="bx--grid bx--grid--no-gutter bx--grid--full-width">
-          <div className="bx--row landing-page__tab-content">
-            <div className="bx--col-lg-16">
+        <div className="cds--grid cds--grid--no-gutter cds--grid--full-width">
+          <div className="cds--row landing-page__tab-content">
+            <div className="cds--col-lg-16">
               Rapidly build beautiful and accessible experiences. The Carbon kit
               contains all resources you need to get started.
             </div>
@@ -297,9 +297,9 @@ Modify the second row to use the `Tab` component.
         </div>
       </Tab>
       <Tab {...props.tab} label="Develop">
-        <div className="bx--grid bx--grid--no-gutter bx--grid--full-width">
-          <div className="bx--row landing-page__tab-content">
-            <div className="bx--col-lg-16">
+        <div className="cds--grid cds--grid--no-gutter cds--grid--full-width">
+          <div className="cds--row landing-page__tab-content">
+            <div className="cds--col-lg-16">
               Carbon provides styles and components in Vanilla, React, Angular,
               and Vue for anyone building on the web.
             </div>
@@ -345,12 +345,12 @@ large viewports. Create a file `_overrides.scss` in `src/content/LandingPage`
 with this declaration block.
 
 ```scss path=src/content/LandingPage/_overrides.scss
-.landing-page__r2 .bx--tabs--scrollable {
+.landing-page__r2 .cds--tabs--scrollable {
   transform: translateZ(0);
   justify-content: flex-end;
 }
 
-.landing-page__r2 .bx--tab-content {
+.landing-page__r2 .cds--tab-content {
   padding: 0;
 }
 ```
@@ -376,9 +376,9 @@ We can now add our images and text for each column in the first `Tab` in
 <!-- prettier-ignore-start -->
 ```html path=src/content/LandingPage/LandingPage.js
 <Tab {...props.tab} label="About">
-  <div className="bx--grid bx--grid--no-gutter bx--grid--full-width">
-    <div className="bx--row landing-page__tab-content">
-      <div className="bx--col-md-4 bx--col-lg-7">
+  <div className="cds--grid cds--grid--no-gutter cds--grid--full-width">
+    <div className="cds--row landing-page__tab-content">
+      <div className="cds--col-md-4 cds--col-lg-7">
         <h2 className="landing-page__subheading">
           What is Carbon?
         </h2>
@@ -391,7 +391,7 @@ We can now add our images and text for each column in the first `Tab` in
         </p>
         <Button>Learn more</Button>
       </div>
-      <div className="bx--col-md-4 bx--offset-lg-1 bx--col-lg-8">
+      <div className="cds--col-md-4 cds--offset-lg-1 cds--col-lg-8">
         <img
           className="landing-page__illo"
           src={`${process.env.PUBLIC_URL}/tab-illo.png`}
@@ -422,13 +422,13 @@ The third row will be created in a later tutorial, so we'll just add the headers
 for now.
 
 ```html path=src/content/LandingPage/LandingPage.js
-<div className="bx--row landing-page__r3">
-  <div className="bx--col-md-4 bx--col-lg-4">
+<div className="cds--row landing-page__r3">
+  <div className="cds--col-md-4 cds--col-lg-4">
     <h3 className="landing-page__label">The Principles</h3>
   </div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Open</div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Modular</div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Consistent</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Open</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Modular</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Consistent</div>
 </div>
 ```
 
@@ -651,9 +651,9 @@ Now in our `RepoPage.js` we'll add our grid containers in the `return` section.
 
 ```javascript path=src/content/RepoPage/RepoPage.js
 return (
-  <div className="bx--grid bx--grid--full-width bx--grid--no-gutter repo-page">
-    <div className="bx--row repo-page__r1">
-      <div className="bx--col-lg-16">Data table will go here</div>
+  <div className="cds--grid cds--grid--full-width cds--grid--no-gutter repo-page">
+    <div className="cds--row repo-page__r1">
+      <div className="cds--col-lg-16">Data table will go here</div>
     </div>
   </div>
 );
@@ -851,7 +851,7 @@ vertical spacing issues.
 In `_repo-page.scss`, add the following styles:
 
 ```scss path=src/content/RepoPage/_repo-page.scss
-.repo-page .bx--row {
+.repo-page .cds--row {
   padding-top: $spacing-05;
   padding-bottom: $spacing-05;
 }
