--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -145,18 +145,18 @@ Let's create the parent component that includes the "The Principles" heading.
 That markup currently looks like this in `LandingPage.js`:
 
 ```html path=src/content/LandingPage/LandingPage.js
-<div className="bx--row landing-page__r3">
-  <div className="bx--col-md-4 bx--col-lg-4">
+<div className="cds--row landing-page__r3">
+  <div className="cds--col-md-4 cds--col-lg-4">
     <h3 className="landing-page__label">The Principles</h3>
   </div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Open</div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Modular</div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Consistent</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Open</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Modular</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Consistent</div>
 </div>
 ```
 
 We want to do a few things when abstracting it to a component. First, we only
-want Carbon (`bx--`) and this component's class names; we don't want to include
+want Carbon (`cds--`) and this component's class names; we don't want to include
 `landing-page__r3` as that's specific to the landing page. For that we'll use
 React `props` so we can pass in and use `props.className`.
 
@@ -175,8 +175,8 @@ Using `props` we can render any heading and any number of children components
 import React from 'react';
 
 const InfoSection = (props) => (
-  <section className={`bx--row ${props.className} info-section`}>
-    <div className="bx--col-md-8 bx--col-lg-4 bx--col-xlg-3">
+  <section className={`cds--row ${props.className} info-section`}>
+    <div className="cds--col-md-8 cds--col-lg-4 cds--col-xlg-3">
       <h3 className="info-section__heading">{props.heading}</h3>
     </div>
     {props.children}
@@ -195,13 +195,13 @@ At this point let's add styling for the new class names that we just added.
 ### InfoCard component
 
 Next up we're going to build a component for columns 2 - 4, which currently
-looks like `<div className="bx--col-md-4 bx--col-lg-4">Carbon is Open</div>`. At
-the bottom of `Info.js`, add:
+looks like `<div className="cds--col-md-4 cds--col-lg-4">Carbon is Open</div>`.
+At the bottom of `Info.js`, add:
 
 ```javascript path=src/components/Info/Info.js
 const InfoCard = (props) => {
   return (
-    <article className="info-card bx--col-md-4 bx--col-lg-4 bx--col-xlg-3 bx--offset-xlg-1">
+    <article className="info-card cds--col-md-4 cds--col-lg-4 cds--col-xlg-3 cds--offset-xlg-1">
       <h4 className="info-card__heading">{props.heading}</h4>
       <p className="info-card__body">{props.body}</p>
       {props.icon}
@@ -228,7 +228,7 @@ In doing so, we:
 <InlineNotification>
 
 **Note:** At extra large viewports, we are using
-`bx--col-xlg-3 bx--offset-xlg-1` so each column takes up 3 of the 16 grid
+`cds--col-xlg-3 cds--offset-xlg-1` so each column takes up 3 of the 16 grid
 columns, with a 1 column offset.
 
 </InlineNotification>
@@ -260,13 +260,13 @@ Until then, we'll use the biggest SVGs.
 With everything imported, replace the current:
 
 ```html path=src/content/LandingPage/LandingPage.js
-<div className="bx--row landing-page__r3">
-  <div className="bx--col-md-4 bx--col-lg-4">
+<div className="cds--row landing-page__r3">
+  <div className="cds--col-md-4 cds--col-lg-4">
     <h3 className="landing-page__label">The Principles</h3>
   </div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Open</div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Modular</div>
-  <div className="bx--col-md-4 bx--col-lg-4">Carbon is Consistent</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Open</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Modular</div>
+  <div className="cds--col-md-4 cds--col-lg-4">Carbon is Consistent</div>
 </div>
 ```
 
@@ -384,7 +384,7 @@ const InfoCard = (props) => {
   const splitHeading = createArrayFromPhrase(props.heading);
 
   return (
-    <article className="info-card bx--col-md-4 bx--col-lg-4 bx--col-xlg-3 bx--offset-xlg-1">
+    <article className="info-card cds--col-md-4 cds--col-lg-4 cds--col-xlg-3 cds--offset-xlg-1">
       <h4 className="info-card__heading">
         {`${splitHeading[0]} `}
         <strong>{splitHeading[1]}</strong>
